# guardana

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURES.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  action.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  extending.md  how-it-works.md  index.md  install.md  integrations.md  profiles.md  usage-monitor.md  usage-probe.md  usage-scan.md  writing-rules.md
docs/maintainers/: github-setup.md
examples/: guardana.yaml
examples/custom_rule/: README.md  pyproject.toml
examples/custom_rule/src/acme_rules/: __init__.py  hardcoded_secret.py  refusal_classifier.py
examples/custom_rule/src/acme_rules/catalog/: overreach.yaml  refusal.yaml
examples/custom_rule/tests/: test_discovery.py  test_hardcoded_secret.py  test_refusal_classifier.py
examples/vulnerable-model/: README.md  load_model.py  train.py
scripts/: bump_version.py  release.py
site/: README.md  _headers  index.html
