[project]
name = "acme-guardana-rules"
version = "0.1.0"
description = "Example third-party Guardana extension (fictional company Acme): custom rules + a custom evaluator."
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = ["Typing :: Typed"]
dependencies = ["guardana-core"]

[project.entry-points."guardana.rules"]
acme = "acme_rules:provide_rules"

[project.entry-points."guardana.evaluators"]
acme = "acme_rules:provide_evaluators"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/acme_rules"]
